--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
         $body.html('');
 
         var index = streams.home.length - 1;
+        var retainIndex = index; //9
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
+          $tweet.text('@' + tweet.user + ': ' + tweet.message + " " + tweet.created_at);
           $tweet.appendTo($body);
           index -= 1;
         }
 
+        setInterval(function() {
+          for (var x = retainIndex + 1; x < streams.home.length - 1; x++) {
+            var tweet = streams.home[x];
+            var $tweet = $('<div></div');
+            $tweet.text('@' + tweet.user + ': ' + tweet.message + " " + tweet.created_at);
+            $tweet.appendTo($body);
+            retainIndex = x;
+          }
+        }, 1000);
       });
 
     </script>
