--- a/index.html
+++ b/index.html
@@ -7,30 +7,42 @@
   </head>
   <body>
     <script>
+      var $body = $('body');
+      $body.html('');
+      var index = streams.home.length - 1;
+      var retainIndex = index; //9
+      var newTweetsInterval;
 
-      $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
-
-        var index = streams.home.length - 1;
-        var retainIndex = index; //9
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.html('@' + tweet.user + ': ' + tweet.message + '<br />' + tweet.created_at);
-          $tweet.appendTo($body);
-          index -= 1;
-        }
-
-        setInterval(function() {
+      var newTweets = function() {
+        newTweetsInterval = setInterval(function() {
           for (var x = retainIndex + 1; x < streams.home.length - 1; x++) {
             var tweet = streams.home[x];
-            var $tweet = $('<div></div>');
-            $tweet.html('@' + tweet.user + ': ' + tweet.message + '<br />' + tweet.created_at);
+            var $tweet = $("<div class='div-" + tweet.user + "'></div>");
+            $tweet.html("<strong class='" + tweet.user + "'>@" + tweet.user + '</strong>: ' + tweet.message + '<br />' + tweet.created_at);
             $tweet.appendTo($body);
             retainIndex = x;
           }
         }, 1000);
+      }
+
+      $(document).ready(function(){
+
+        while(index >= 0){
+          var tweet = streams.home[index];
+          var $tweet = $("<div class='div-" + tweet.user + "'></div>");
+          $tweet.html("<strong class='" + tweet.user + "'>@" + tweet.user + '</strong>: ' + tweet.message + '<br />' + tweet.created_at);
+          $tweet.appendTo($body);
+          index -= 1;
+        }
+
+        newTweets();
+        
+      }).on('click', ".shawndrost", function() {
+        console.log("poop");
+        $(".div-sharksforcheap").remove();
+        $(".div-mracus").remove();
+        $(".div-douglascalhoun").remove();
+        clearInterval(newTweetsInterval);       
       });
 
     </script>
